plugins {
	id 'org.springframework.boot' version '2.7.0'
	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
	id 'java'
}

java {
	toolchain {
		languageVersion.set(JavaLanguageVersion.of(15))
	}
}

repositories {
		mavenCentral()
	}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter'
    implementation 'org.springframework.boot:spring-boot-starter-test'
}

tasks.withType(JavaCompile) {
    options.compilerArgs.add("--enable-preview")
}

tasks.named('test') {
	useJUnitPlatform()
}
